# liquidity-sentinel

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
config/: settings.yaml
dashboard/: app.py
data/samples/: README.md  ofz_auctions.csv  ofz_auctions_historical.csv  repo_auctions.csv  roskazna_deposits.csv
scripts/: build_ofz_from_bliquidity.py  build_roskazna_from_sors.py  daily_run.sh  fetch_ofz_wayback.py
src/: cli.py  config.py  logging.py
src/aggregation/: backtest.py  calibration.py  lsi.py  lsi_points.py  overlap.py
src/core/: dates.py  mad.py  types.py
src/data/: cbr.py  cbr_hd_base.py  fns.py  http_client.py  minfin.py  roskazna.py  wayback.py
src/llm/: comment.py  knowledge.py  lsi_context.py  rag_chat.py  retriever.py  yandex_gpt.py
src/modules/: base.py  m1_reserves.py  m2_repo.py  m3_ofz.py  m4_tax.py  m5_treasury.py
src/pipeline/: runner.py
tests/: test_calibration.py  test_cbr_parsers.py  test_lsi.py  test_mad.py  test_minfin_parser.py  test_overlap.py  test_rag.py  test_yandex_gpt.py
